<resources>
    <string name="app_name">Tourists Little Helper</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="next">Далее</string>
    <string name="search_place">Введите место</string>
    <string name="popular_places_activity_description">Выберите места, которые хотели бы посетить</string>
    <string name="new_route">Построить маршрут</string>
    <string name="start_activity_text">Выберите места, которые вас интересуют</string>
    <string name="confirm">Подтвердить</string>
    <string name="reviews">Отзывы</string>
    <string name="moreinfo">Посмотреть полную информацию о месте</string>
    <string name="question_place">Хотите ли вы посетить данное место?</string>
    <string name="route_name_hint">Введите название маршрута</string>
    <string name="save">Сохранить</string>
    <string name="change_types">Изменить типы мест</string>
    <string name="no_routes">У Вас нет сохраненных маршрутов</string>
    <string name="delete_items">Удалить маршруты</string>
    <string name="no_connection">Нет соединения с интернетом</string>
    <string name="routes">Маршруты</string>
    <string name="types">Выберите типы мест</string>
    <string name="no_city_chosen">Вы не выбрали город</string>
    <string name="choose_start_place">Выберете, откуда хотите начать маршрут</string>
    <string name="choose_finish_place">Выберете, где хотите закончить маршрут</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="if_choose_start_and_finish_place">Хотите ли вы выбрать, откуда начинать маршрут и где его заканчивать?</string>
    <string name="choose_start_place_btn">Выбрать начало маршрута</string>
    <string name="choose_finish_place_btn">Выбрать конец маршрута</string>
    <string name="no_place_chosen">Вы не выбрали место</string>

    <string name="error">Произошла ошибка</string>
</resources>
