<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.insulardevelopment.touristslittlehelper.view.activities.ChooseStartAndFinishPlaceActivity">
    <fragment
        android:id="@+id/choose_start_and_finish_place_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.insulardevelopment.touristslittlehelper.view.activities.ChooseLocationActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@color/colorLight"
        android:orientation="vertical">
        <TextView
            android:id="@+id/choose_start_and_finish_place_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_start_place"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <AutoCompleteTextView
            android:id="@+id/choose_start_place_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/search_place"
            android:inputType="text"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/choose_start_place_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="#fff" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/choose_start_place_ok_btn"
            android:text="@string/ok"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

</RelativeLayout>
