<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.insulardevelopment.touristslittlehelper.view.activities.NewRouteActivity">

    <fragment
        android:id="@+id/route_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.insulardevelopment.touristslittlehelper.view.activities.NewRouteActivity" />

    <LinearLayout
        android:id="@+id/route_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightYellow"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="13dp"
                android:src="@drawable/walk_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/new_route_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="90dp"
                    android:hint="@string/route_name_hint"
                    android:textColor="@color/darkBlue"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/city_name_new_route_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="city"
                    android:textColor="@color/colorNextBtnPressed"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_margin="6dp"
                android:src="@drawable/distance_200" />

            <TextView
                android:id="@+id/new_route_distance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:text="10km"
                android:textColor="@color/darkBlue"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_margin="6dp"
                android:layout_marginLeft="70dp"
                android:src="@drawable/time_71" />

            <TextView
                android:id="@+id/new_route_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="5h"
                android:textColor="@color/darkBlue"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_route_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/route_layout"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-45dp"
        android:background="@drawable/round_button"
        android:text="@string/save"
        android:textColor="@color/colorLight"
        android:elevation="6dp"/>

    <RelativeLayout
        android:id="@+id/new_route_place_info_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/route_layout"
        android:background="@color/transparent_blue"
        android:padding="7dp"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/new_route_close_ib"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="100dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/close_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/new_route_place_info_icon_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/museum_71" />

                <TextView
                    android:id="@+id/new_route_place_name_info_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:text="Название места"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/new_address_icon_iv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/address_icon_200" />

                <TextView
                    android:id="@+id/new_route_place_address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/darkBlue"
                    android:textSize="15dp" />
            </LinearLayout>

            <Button
                android:id="@+id/new_route_more_info_place_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/moreinfo"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="10dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
